--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-					<p>A brief paragraph about you and what kind of job/company you are looking to work for.</p>
+					<p>To work with an opportunity for growth and career advancement as successful achievements. To provide my best potential and work with a team involved in innovating and implementing new ideas. To gain new skills and use them in further ventures..</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
