--- a/index.html
+++ b/index.html
@@ -48,10 +48,25 @@
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
-					<p></p><h3>MTech(Digital Electronics and Communication)</h3>
+					<p><h3>MTech(Digital Electronics and Communication)</h3>
 	
 		Manipal institute of technology<br>
 		2022-2024
+	</p>
+	<p><h3>BE(Electronics and Communication)</h3>
+	
+		Jawaharlal Nehru National College Of Engineering<br>
+		2016-2020
+	</p>
+	<p><h3>Pre University College{PUC} (PCMB)</h3>
+	
+		SAV Composite PU College<br>
+		2014-2016
+	</p>
+	<p><h3>Schooling</h3>
+	
+		Jawaharlal Nehru English Medium High School<br>
+		2004-2014
 	</p>
 	<p>
 		
