--- a/index.html
+++ b/index.html
@@ -72,14 +72,17 @@
 		
 	</p>
 				
-				</section>  
+				</section> 
+				<section>
+					<h2><details style="display: inline;"><summary>Hobbies</summary><ul><font size="2"><li>Singing</li>
+					</section> 
 				<section>
 							
 					<h2><details style="display: inline;"><summary>Publications</summary><ul><font size="-1"><li>
 						<a href="https://ijsrd.com/Article.php?manuscript=IJSRDV8I50381">Blockchain Application: Usage in Food Supply, Agriculture and Other Industries</a></li>
-						<li><a href="https://ijisrt.com/intelligent-solar-tracker-vehicle-for-supply-channel-of-electric-vehicle-need-using-image-processing-and-mobile-network">Intelligent solar tracker vehicle for supply channel of electric vehicle need using image processing and mobile network</a></li>
-						<li><a href="https://res.ijsrcseit.com/page.php?param=CSEIT19471">Army Security communication Network-An Review on Inter Tactical Moblie Ad Hoc Network Routing Protocol</a></li>
-						<li><a href="https://www.ijirset.com/special-issue-rameaf-2017.html">Usage and Scope of Cryogenics in Field of Machine Tool Treatment and in Tribology of Space Engine</a></li></font></ul></details><br>
+						<br><li><a href="https://ijisrt.com/intelligent-solar-tracker-vehicle-for-supply-channel-of-electric-vehicle-need-using-image-processing-and-mobile-network">Intelligent solar tracker vehicle for supply channel of electric vehicle need using image processing and mobile network</a></li>
+						<br><li><a href="https://res.ijsrcseit.com/page.php?param=CSEIT19471">Army Security communication Network-An Review on Inter Tactical Moblie Ad Hoc Network Routing Protocol</a></li>
+						<br><li><a href="https://www.ijirset.com/special-issue-rameaf-2017.html">Usage and Scope of Cryogenics in Field of Machine Tool Treatment and in Tribology of Space Engine</a></li></font></ul></details><br>
 
 				</section>          
 			</article>
