--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 							<i class="fab fa-linkedin" aria-hidden="true"></i>
 							<a href="https://www.linkedin.com/in/goutham-s-tantri-6b036015b/">Goutham S Tantri</a>
 						</p>
+						<p>
+							<i class="fa fa-address-card" aria-hidden="true"></i>
+							Shree Anantha Lakshmi Nilaya, NMC Right Side
+								Behind Hindu Mahasabha Ganapathi Temple, Hosamane Bhadravathi-577301
+						
+						</p>
 					</p></h2>
 					<!-- contact info including social media -->
 				</section>
