--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 				<section>
 					<h2>SKILLS</h2>
 					<details style="display: inline;"><summary><b>Programming Language</b></summary><ul><li>C</li><li>C++</li><li>Python</li><li>Verilog</li><li>VHDL</li><li>Perl</li><li>HTML</li><li>CSS</li><li>AngularJS</li></ul></details><br>
-					<details style="display: inline;"><summary><b>Tool</b></summary><ul><li>Cadence</li><li>Ansys HFSS</li><li>MATLAB</li><li>KICAD</li><li>VHDL</li><li>Perl</li></ul></details><br>
+					<details style="display: inline;"><summary><b>Tool</b></summary><ul><li>Cadence</li><li>Ansys HFSS</li><li>MATLAB</li><li>KICAD</li><li>MAGIC</li><li>Perl</li></ul></details><br>
 					<details style="display: inline;"><summary><b>Hardware</b></summary><li>KICAD</li><li>MATLAB</li><li>AWS</li></details><br>
-					<details style="display: inline;"><summary><b>Design Software</b></summary><li>KICAD</li><li>MATLAB</li><li>AWS</li></details><br>
+					<details style="display: inline;"><summary><b>Software</b></summary><li>KICAD</li><li>MATLAB</li><li>MAGIC</li></details><br>
 					<details style="display: inline;"><summary><b>Version Control</b> </summary><li>KICAD</li><li>MATLAB</li><li>AWS</li></details><br>
 
 					  </div>
