--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<details style="display: inline;"><summary><b>Tool</b></summary><ul><li>Cadence</li><li>Ansys HFSS</li><li>MATLAB</li><li>KICAD</li><li>MAGIC</li><li>Perl</li></ul></details><br>
 					<details style="display: inline;"><summary><b>Hardware</b></summary><li>KICAD</li><li>MATLAB</li><li>AWS</li></details><br>
 					<details style="display: inline;"><summary><b>Software</b></summary><li>KICAD</li><li>VirtualBox</li><li>MAGIC</li></details><br>
-					<details style="display: inline;"><summary><b>Version Control</b> </summary><li>KICAD</li><li>MATLAB</li><li>AWS</li></details><br>
+					<details style="display: inline;"><summary><b>Version Control</b> </summary><li>Git</li><li>BITBUCKET</li><li></li></details><br>
 
 					  </div>
 				</section>
