--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<!-- resume header with your name and title -->
 			<h1>Goutham S Tantri</h1>
 			<hr>
-			YOUR TITLE (EX: SOFTWARE ENGINEERING STUDENT)
+			Vlsi and Embedded System Enthusiast
 			<hr>
 		</header>
 		<main>
@@ -191,6 +191,18 @@
 					<details style="display: inline;"><summary><b>DESIGN OF MILLIMETER-WAVE PATCH ANTENNA USING HFSS</b><br></summary><ul>Designed a circular patch antenna with necessary slots using Ansys HFSS which operate in the millimeter wave range with 5ghz bandwidth centered at 27Ghz.<br><details style="display: inline;"><summary><b>Tools Used</b></summary><ul><li>HFSS</li></ul></details><br></ul></details><br>
 </div>
 <br>
+<!--<div>
+						
+						
+	<h2> <u>Ongoing Projects</u></h2>
+	
+	<details style="display: inline;"><summary><b>SEMI AUTOMATED WAR FIELD ROBOT</b><br></summary><ul>Designed and developed a robot that can be used as a replacement for soldiers at war field which can be used for patrolling and attacking. With the help of  ad hoc communications the backend controlling is achieved by usibg image processing techniques.<br><details style="display: inline;"><summary><b>Tools and Technology Used</b></summary><ul><li>Matlab</li><li>KNN(K-nearest Neighbour) Algorithm</li><li>Ardiuno Mega(ATmega 328 PPU controller)</li><li>Ardiuno IDE</li><li></li></ul></details><br>
+   </ul></details><br>
+   <details style="display: inline;"><summary><b>Design of an UWB (ultra-wideband) antenna using HFSS</b><br></summary><ul>Designed a square patch antenna using Ansys HFSS which operate in the ultra- wideband range frequency.<br><details style="display: inline;"><summary><b>Tools Used</b></summary><ul><li>HFSS</li></ul></details><br></ul></details><br>
+   <details style="display: inline;"><summary><b>Electronic voting machine</b><br></summary><ul>Designing an online voting machine with otp based authentication using python.<br><details style="display: inline;"><summary><b>Tools Used</b></summary><ul><li>Python</li><li>SQL database</li></ul></details><br></ul></details><br>
+   <details style="display: inline;"><summary><b>DESIGN OF MILLIMETER-WAVE PATCH ANTENNA USING HFSS</b><br></summary><ul>Designed a circular patch antenna with necessary slots using Ansys HFSS which operate in the millimeter wave range with 5ghz bandwidth centered at 27Ghz.<br><details style="display: inline;"><summary><b>Tools Used</b></summary><ul><li>HFSS</li></ul></details><br></ul></details><br>
+</div>
+<br>-->
 <div>
 	<h2><u>EXTRA-CURRICULAR ACTIVITIES</u></h2>
 	<li>Participant at workshop on “INTERNET OF THINGS (IOT)”.</li>
