--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<details style="display: inline;"><summary><b>Hardware</b></summary><li>KICAD</li><li>MATLAB</li><li>AWS</li></details><br>
 					<details style="display: inline;"><summary><b>Software</b></summary><li>KICAD</li><li>VirtualBox</li><li>MAGIC</li></details><br>
 					<details style="display: inline;"><summary><b>Version Control</b> </summary><li>Git</li><li>BITBUCKET</li><li></li></details><br>
-
+terraform, Ansible,jenkins,typescript
 					  </div>
 				</section>
 				<section>
